--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Grid layout</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container"></div>
+  </body>
 </html>
